# Sartor-claude-network

./: .env.example  .eslintrc.json  .gitignore  .mcp.json  .memory-server-roundtrip-test  AGENT_STATUS_IMPLEMENTATION.md  ALGORITHM_CHEATSHEET.md  ANSWER-NEW-AGENT-ONBOARDING.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  BOOTSTRAP_MESH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE-AUDIT-AND-TODO.md  COMPREHENSIVE-TEST-PLAN.md  EXECUTIVE_CLAUDE.md  FEAT-001-COMPLETION-SUMMARY.md  FEAT-002-IMPLEMENTATION-REPORT.md  FEAT-003-IMPLEMENTATION-SUMMARY.md  FILES_CREATED.md  FINAL-IMPLEMENTATION-REPORT.md  FINAL-SUMMARY.md  FINDINGS_IMPLEMENTATION_REPORT.md  FIREBASE-MCP-VERIFICATION.md  FIRESTORE_IMPLEMENTATION_REPORT.md  FIRESTORE_QUICKSTART.md  FOR-NEW-AGENTS.txt  GITHUB-AUTH-HELPER.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_ORDER.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MAIL-SYSTEM-IMPLEMENTATION.md  MASTER_PLAN.md  MEMORY_SYSTEM_SPEC.md  ONBOARD.txt  ONE-URL-ONBOARDING.md  PARALLEL_AGENT_PERFORMANCE_REPORT.md  PARALLEL_AGENT_QUICK_REFERENCE.md  PARALLEL_AGENT_TEST_RESULTS.md  (+75 more)
.claude/: .learnings.jsonl  AGENT_INIT.md  (+14 more)
strokestyles/: .gitignore  IMPLEMENTATION_SUMMARY.md  PIPELINE_IMPLEMENTATION.md  VALIDATION_REPORT.md  VISUALIZATION_USAGE.md  pyproject.toml
strokestyles/src/strokestyles/: __init__.py
strokestyles/src/strokestyles/core/: contour.py  glyph.py  polygon.py  stroke.py
strokestyles/src/strokestyles/geometry/: convexity.py  junction.py  linking.py  medial_axis.py
strokestyles/src/strokestyles/io/: data_loader.py
strokestyles/src/strokestyles/pipeline/: flattener.py  font_loader.py  segmenter.py  stroke_recovery.py
strokestyles/tests/integration/: test_cross_font.py  test_full_pipeline.py  test_ground_truth.py
strokestyles/tests/unit/: test_core.py  test_geometry.py  test_pipeline.py
(+6277 files in other folders)
